--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -107,8 +107,8 @@ Our conclusion is quite simple: {\em location tests almost always have more powe
 
 The main argument for our statement rests upon the observation that with typical sample sizes, the accuracy test statistic is highly discrete. 
 Discrete test statistics are known to be conservative, since they cannot exhaust the permissible type $I$ error rates. 
-For the accuracy test statistic, the degree of discretization is governed by the number of samples. 
-in our running example \cite{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
+In accuracy tests, the degree of discretization of the accuracy statistic is governed by the number of samples. 
+In our running example \cite{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
 This number of examples is not unusual if considering this is the number of subject in a genetic study, or the number of trial repeats in an fMRI brain scan. 
 
 The discretization effect is further augmented if the test statistic is highly concentrated. 
