--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -111,17 +111,16 @@ In accuracy tests, the degree of discretization of the accuracy statistic is gov
 In our running example \cite{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
 This number of examples is not unusual if considering this is the number of subject in a genetic study, or the number of trial repeats in an fMRI brain scan. 
 
-The discretization effect is further augmented if the test statistic is highly concentrated. 
-For some intuition consider the usage of the train-accuracy test statistic (i.e., not cross validated).
-Because the testing problem is high dimensional, the observed train accuracy will be high. But the same will occur in every permutation. 
-The permutation accuracies will tend to concentrate around $1$ with a granularity depending on the sample size. 
-In a very high dimensional setup, the accuracy will be $1$ for the observed data, but also for any permuted data set. 
-The permutation p-value will thus be $1$ for almost all samples, and the null will never be rejected. 
+The discretization effect is aggravated if the test statistic is highly concentrated. 
+For an intuition consider the usage of the train-accuracy test statistic (i.e., not cross validated).
+Because the testing problem is high dimensional, the observed train accuracy will be close to $1$. 
+The same will occur in every permutation, for the same reason. 
+The permutation p-value will thus be $1$ for almost all samples, the null will never be rejected, and the test will have no power. 
 
-In the following, we look into the conservativeness of signal detection using an the classification accuracy. 
+Given these considerations, it is quite surprising that signal detection using accuracy tests is so popular in neuroscience and genetics. 
+In the following, we quantify the power loss to be expected in typical studies, and identify the problems' characteristics that govern its severity. 
 We start by establishing a best practice for permutation testing using the accuracy test statistic, 
-
-We discuss the problem characteristics that govern the magnitude of the conservativeness, and try to offer an intuition to the scope of the observation that a multivariate test should always be preferred over a classification approach. 
+We also discuss the problem characteristics that govern the magnitude of the conservativeness, and try to offer an intuition to the scope of the observation that a multivariate test should always be preferred over a classification approach. 
 
 
 
@@ -144,16 +143,10 @@ The prediction accuracy, denoted $\acc_{\hypEstim}$, is defined as the probabili
 
 
 
-
-
-
-
-%%%% Section %%%%
-\section{How to Perform the Permutation Test? False positive Considerations}
+\subsection{Candidate Tests}
 \label{sec:considerations}
 
-To discuss the power of a permutation test using the accuracy test statistic, we need to establish some best practices for such a test. 
-The design of the test consists of the following choices: 
+The design of a permutation test using the prediction accuracy, requires the following design choices: 
 \begin{description}
 \item [What test statistic?] 
 \item [Cross validated or not?] Is the statistic cross validated or not?
