--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -1,25 +1,13 @@
-%% PNAStwoS.tex
-%% Sample file to use for PNAS articles prepared in LaTeX
-%% For two column PNAS articles
-%% Version1: Apr 15, 2008
-%% Version2: Oct 04, 2013
-
-%% BASIC CLASS FILE
-\documentclass[9pt,twoside]{pnas-new}
-%\documentclass[9pt,twocolumn,twoside,lineno]{pnas-new}
-%\documentclass{pnas-new}
-
-
-\templatetype{pnasresearcharticle} % Choose template 
-% {pnasresearcharticle} = Template for a two-column research article
-% {pnasmathematics} = Template for a one-column mathematics article
-% {pnasinvited} = Template for a PNAS invited submission
-
-%% ADDITIONAL OPTIONAL STYLE FILES Font specification
-
-\usepackage{amssymb,amsfonts,amsmath}
+\documentclass[12pt,a4paper]{article}
+\usepackage[utf8]{inputenc}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{graphicx}
 \usepackage{todonotes}
+\usepackage{natbib}
 
+\author{Jonathan Rosenblatt}
 
 
 %% OPTIONAL MACRO DEFINITIONS
@@ -41,60 +29,10 @@
 
 \title{Template for preparing your research report submission to PNAS using Overleaf}
 
-% Use letters for affiliations, numbers to show equal authorship (if applicable) and to indicate the corresponding author
-\author[a,c,1]{Author One}
-\author[b,1,2]{Author Two} 
-\author[a]{Author Three}
 
-\affil[a]{Affiliation One}
-\affil[b]{Affiliation Two}
-\affil[c]{Affiliation Three}
-
-% Please give the surname of the lead author for the running footer
-\leadauthor{Rosenblatt} 
-
-% Please add here a significance statement to explain the relevance of your work
-\significancestatement{Authors must submit a 120-word maximum statement about the significance of their research paper written at a level understandable to an undergraduate educated scientist outside their field of speciality. The primary goal of the Significance Statement is to explain the relevance of the work in broad context to a broad readership. The Significance Statement appears in the paper itself and is required for all research papers.}
-
-% Please include corresponding author, author contribution and author declaration information
-\authorcontributions{Please provide details of author contributions here.}
-\authordeclaration{Please declare any conflict of interest here.}
-\equalauthors{\textsuperscript{1}A.O.(Author One) and A.T. (Author Two) contributed equally to this work (remove if not applicable).}
-\correspondingauthor{\textsuperscript{2}To whom correspondence should be addressed. E-mail: author.two\@email.com}
-
-% Keywords are not mandatory, but authors are strongly encouraged to provide them. If provided, please include two to five keywords, separated by the pipe symbol, e.g:
-%\keywords{Keyword 1 $|$ Keyword 2 $|$ Keyword 3 $|$ ...} 
-
-
-
-
-
-
-\begin{abstract}
-[TODO]
-\end{abstract}
-
-\dates{This manuscript was compiled on \today}
-\doi{\url{www.pnas.org/cgi/doi/10.1073/pnas.XXXXXXXXXX}}
 
 
 \begin{document}
-% Optional adjustment to line up main text (after abstract) of first page with line numbers, when using both lineno and twocolumn options.
-% You should only change this length when you've finalised the article contents.
-\verticaladjustment{-2pt}
-
-\maketitle
-\thispagestyle{firststyle}
-\ifthenelse{\boolean{shortarticle}}{\ifthenelse{\boolean{singlecolumn}}{\abscontentformatted}{\abscontent}}{}
-
-% If your first paragraph (i.e. with the \dropcap) contains a list environment (quote, quotation, theorem, definition, enumerate, itemize...), the line after the list may have some extra indentation. If this is the case, add \parshape=0 to the end of the list environment.
-\dropcap{T}his PNAS journal template is provided to help you write your work in the correct journal format.  Instructions for use are provided below.
-
-Note: please start your introduction without including the word ``Introduction'' as a section heading (except for math articles in the Physical Sciences section); this heading is implied in the first paragraphs. 
-
-
-
-
 %Sketch: 
 %- The conservativeness of the test. 
 %- What does it detect?
@@ -102,8 +40,21 @@ Note: please start your introduction without including the word ``Introduction''
 %- Is conservativeness always there?
 
 
+\maketitle
+
+\begin{abstract}
+[TODO]
+\end{abstract}
+
 
 %%%% Introduction %%%
+\section{Introduction}
+\label{sec:introduction}
+
+
+
+
+
 
 A common workflow in genetics or neuroimaging consists of fitting a classifier, and estimating its predictive accuracy using cross validation. 
 Given that the cross validated accuracy is a random quantity, it is then common to test if the cross validated accuracy is significantly better than chance using a permutation test.  
@@ -239,9 +190,7 @@ The subset of tests we will be comparing is collected for convenience in Table~\
 
 \begin{table}[h]
 \centering
-\caption{TODO: explain table + fix caption}
-\label{tab:collected}
-\begin{tabular}{l|c|c|c|r}
+\begin{tabular}{l|c|c|c|c}
 Name & Basis & CV & Accuracy & Parameters\\ 
 \hline
 \hline
@@ -261,6 +210,8 @@ svm.noCV.2 & SVM & FALSE & accuracy & cost=1e-1 \\
 svm.noCV.3 & SVM & FALSE & z-accuracy & cost=1e1 \\ 
 svm.noCV.4 & SVM & FALSE & z-accuracy & cost=1e-1 \\
 \end{tabular} 
+\caption{TODO: explain table + fix caption}
+\label{tab:collected}
 \end{table}
 
 
@@ -285,7 +236,7 @@ In particular:
 
 
 
-\begin{figure}[ht]
+\begin{figure}[h]
 \centering
 %\includegraphics[width=0.7\linewidth]{}
 \missingfigure[figwidth=6cm]{TODO}
@@ -308,7 +259,7 @@ On the other hand, the results of our previous sections suggest that the conserv
 As seen in Figure~\ref{fig:simulation_2}, the use of the accuracy test statistic for signal detection, is underpowered compared to a multivariate test. 
 It is, however, too early to conclude that a multivariate test is to be preferred over the accuracy statistic, as we will later discuss. 
 
-\begin{figure}[ht]
+\begin{figure}[h]
 \centering
 %\includegraphics[width=0.7\linewidth]{}
 \missingfigure[figwidth=6cm]{TODO}
@@ -321,7 +272,7 @@ It is, however, too early to conclude that a multivariate test is to be preferre
 
 
 
-\section{A Neuroimaging Example}
+\section{Neuroimaging Example}
 \label{sec:example}
 
 In the previous sections, we have established using simulations that 
@@ -361,13 +312,12 @@ fff
 
 
 
-
+\bibliographystyle{abbrvnat}
 \bibliography{Permuting_Accuracy.bib}
-%\bibliographystyle{PNAS.bst}
-\bibliographystyle{pnas2011.bst}
-%\bibliographystyle{abbvrnat}
+
+
+
+
 
 
 \end{document}
-
-
