removed PNAS template. Standardized style.

--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -7,7 +7,7 @@
 \usepackage{todonotes}
 \usepackage{natbib}
 
-\author{Jonathan Rosenblatt}
+\author{Jonathan Rosenblatt \and Roee Gilron \and Roy Mukamel}
 
 
 %% OPTIONAL MACRO DEFINITIONS
@@ -27,7 +27,7 @@
 \newcommand{\dominant}{\hat{p}_{max}}
 
 
-\title{Template for preparing your research report submission to PNAS using Overleaf}
+\title{Better than chance classification for signal detection}
 
 
 
