--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -335,6 +335,19 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
   file = {Ojala_Garriga_2010_Permutation Tests for Studying Classifier Performance.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/3JAFGW2X/Ojala_Garriga_2010_Permutation Tests for Studying Classifier Performance.pdf:application/pdf;Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/Z5T8DEE6/ojala10a.html:text/html}
 }
 
+@article{schafer_shrinkage_2005,
+  title = {A shrinkage approach to large-scale covariance matrix estimation and implications for functional genomics},
+  volume = {4},
+  timestamp = {2016-07-04T21:03:44Z},
+  number = {1},
+  urldate = {2016-07-04},
+  journal = {Statistical applications in genetics and molecular biology},
+  author = {Sch{\"a}fer, Juliane and Strimmer, Korbinian and {others}},
+  year = {2005},
+  pages = {32},
+  file = {Schäfer et al_2005_A shrinkage approach to large-scale covariance matrix estimation and.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/AXE5W4FW/Schäfer et al_2005_A shrinkage approach to large-scale covariance matrix estimation and.pdf:application/pdf}
+}
+
 @unpublished{varoquaux_assessing_2016,
   title = {Assessing and tuning brain decoders: cross-validation, caveats, and guidelines},
   shorttitle = {Assessing and tuning brain decoders},
