--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -79,9 +79,9 @@ In contrast to \emph{accuracy tests}, we call these \emph{location tests}.
 
 At this point, it becomes unclear which is the preferred test. 
 This was precisely the topic of \cite{ramdas_classification_2016}, who compared the Hotelling location test to the accuracy of \emph{Fisher's linear discriminant analysis} classifier (LDA) \citep{hastie_elements_2003-1}. 
-Using an asymptotic analysis, the authors of \cite{ramdas_classification_2016} concluded that accuracy and location tests are equivalent with respect to their order of convergence to a consistent test, while they may differ in constants. 
+Using an asymptotic analysis, \cite{ramdas_classification_2016} concluded that accuracy and location tests are equivalent with respect to their order of convergence to a consistent test, while they may differ in constants. 
 
-Those constants, governing the power of the tests, are the focus of this contribution. 
+Those constants, governing the power of the tests, are crucial when dealing with typical sample sizes in neuroscience and genetics, and thus the focus of this study. 
 In particular, which test is to be preferred in finite samples? 
 Our conclusion is quite simple: {\em location tests almost always have more power than accuracy tests}.
 
