--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -86,16 +86,16 @@ In particular, which test is to be preferred in finite samples?
 Our conclusion is quite simple: {\em location tests almost always have more power than accuracy tests}.
 
 The main argument for our statement rests upon the observation that with typical sample sizes, the accuracy test statistic is highly discrete. 
-Discrete test statistics are known to be conservative, since they cannot exhaust the permissible type $I$ error rates. 
+Discrete test statistics are known to be conservative \citep{hemerik_exact_2014}, since they cannot exhaust the permissible false positive rate. 
 In accuracy tests, the degree of discretization of the accuracy statistic is governed by the number of samples. 
-In our running example \cite{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
+In our running neuroscience example \citep{gilron_quantifying_2016}, the classification is performed based on $40$ trials, so that the test statistic may assume only $40$ possible values. 
 This number of examples is not unusual if considering this is the number of subject in a genetic study, or the number of trial repeats in an fMRI brain scan. 
 
 The discretization effect is aggravated if the test statistic is highly concentrated. 
 For an intuition consider the usage of the train-accuracy test statistic (i.e., not cross validated).
 Because the testing problem is high dimensional, the observed train accuracy will be close to $1$. 
 The same will occur in every permutation, for the same reason. 
-The permutation p-value will thus be $1$ for almost all samples, the null will never be rejected, and the test will have no power. 
+The permutation p-value will thus be $1$ for almost all data sets, the null will never be rejected, and the test will have no power. 
 
 Given these considerations, it is quite surprising that signal detection using accuracy tests is so popular in neuroscience and genetics. 
 In the following, we quantify the power loss to be expected in typical studies, and identify the problems' characteristics that govern its severity. 
