--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -187,7 +187,7 @@ Our intuition suggests that since more folds imply a less concentrated estimate,
 
 \end{description}
 
-The reader will have observed that there are indeed many ways to perform a permutation test using a cross validated statistic. 
+By now, the reader will have observed that there are indeed many ways to perform a permutation test using a cross validated statistic. 
 The subset of tests we will be comparing is collected for convenience in Table~\ref{tab:collected}.
 
 
