--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -220,7 +220,8 @@ Three are location tests: Hotelling, Hotelling.shrink, and sd.
 \textit{Hotelling.shrink} is a high dimensional version with the regularized covariance in \cite{schafer_shrinkage_2005}. 
 \textit{sd} is another high dimensional version of the $T^2$, from \cite{srivastava_two_2013}. 
 The rest of the tests are variations of the linear SVM, and Fisher's LDA, with varying accuracy measures, cross validated or not, and varying tuning parameters. 
-For example, \textit{svm.CV.4}
+For example, \textit{svm.CV.4} is a linear SVM, with \textit{libsvm}'s cost parameter set at $0.1$, using the cross validated z-scored accuracy ($|\acc_{\hypEstim}-\dominant|/\sqrt{\dominant(1-\dominant)}$, see Section~\ref{sec:considerations}).
+Another example is \textit{lda.noCV.1}, which is Fisher's LDA, returning the train accuracy, without cross validation, and without z-scoring. 
 }
 \label{tab:collected}
 \end{table}
