--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -248,10 +248,11 @@ In particular:
 
 
 
+
 \begin{figure}[h]
 \centering
-%\includegraphics[width=0.7\linewidth]{}
-\missingfigure[figwidth=6cm]{TODO}
+\includegraphics[width=0.7\linewidth]{"art/2016-07-26 20-55-48"}
+%\missingfigure[figwidth=6cm]{TODO}
 \caption{
 	\label{fig:simulation_1}
 	TODO}
