--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -253,19 +253,22 @@ In particular:
 
 \begin{figure}[h]
 \centering
-
 %\missingfigure[figwidth=6cm]{TODO}
-	
+\caption{\footnotesize
+The power of a permutation test with various test statistics. 
+The power size on the $x$ axis. 
+The various statistics on the $y$ axis. Their details are given in Table~\ref{tab:collected}. }	
+\label{fig:simulation_1}
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-07-26 20-55-48"}
-	  \caption{Imbalanced}  %TODO
-	\label{fig:simulation_1}
+	  \includegraphics[width=1\linewidth]{"art/2016-07-26 20:55:48"}
+	  \caption{Unbalanced}  %TODO
+	\label{fig:simulation_11}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 	  \centering
-	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11-42-05"}
-	  \caption{Unbalanced} %TODO
+	  \includegraphics[width=1\linewidth]{"art/2016-07-27 11:42:05"}
+	  \caption{Balanced} %TODO
 	\label{fig:simulation_12}
 	\end{subfigure}
 	
