--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -256,7 +256,8 @@ In particular:
 %\missingfigure[figwidth=6cm]{TODO}
 \caption{\footnotesize
 The power of a permutation test with various test statistics. 
-The power size on the $x$ axis. 
+The power on the $x$ axis. 
+Effect are color and shape coded. They are assumed to be equal in all the $23$ dimensions, and vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
 The various statistics on the $y$ axis. Their details are given in Table~\ref{tab:collected}. }	
 \label{fig:simulation_1}
 	\begin{subfigure}{.5\textwidth}
