--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -35,6 +35,19 @@
   pmid = {26745025}
 }
 
+@article{benjamini_controlling_1995,
+  title = {Controlling the false discovery rate: a practical and powerful approach to multiple testing},
+  volume = {57},
+  shorttitle = {Controlling the false discovery rate},
+  timestamp = {2013-04-28T13:10:53Z},
+  journal = {JOURNAL-ROYAL STATISTICAL SOCIETY SERIES B},
+  author = {Benjamini, Y. and Hochberg, Y.},
+  year = {1995},
+  keywords = {FDR,Seminal,Statistics},
+  pages = {289--289},
+  file = {Benjamini_Hochberg_1995_Controlling the false discovery rate.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/D5FV8QSI/Benjamini_Hochberg_1995_Controlling the false discovery rate.pdf:application/pdf;Controlling the False Discovery Rate\: A Practical and Powerful Approach to Multiple Testing:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/DDUCV4K7/2346101.html:text/html}
+}
+
 @book{hastie_elements_2003-1,
   title = {The {{Elements}} of {{Statistical Learning}}},
   isbn = {0-387-95284-5},
