--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -305,8 +305,9 @@ Each subject was exposed to $20$ sounds of each type, totalling in $n=40$ trials
 The study was rather large and consisted of about $200$ subjects.
 The data was kindly made available by the authors at the OpenfMRI website\footnote{\url{https://openfmri.org/}}.
 
-To verify the observation that location tests have more power than accuracy tests, we compute our battery of test statistics using the MVPA analysis pipeline of \cite{stelzer_statistical_2013}, also used in \cite{gilron_quantifying_2016}. 
+To verify the observation that location tests have more power than accuracy tests, we perform permutation inference using the pipeline of \cite{stelzer_statistical_2013}, which was also used in \cite{gilron_quantifying_2016}. 
 For completeness, the pipeline is described in Appendix~\ref{apx:analysis}. 
+To demonstrate our point, we compare the \emph{sd} location test with the \emph{svm.cv.1} accuracy test (see Table~\ref{tab:collected} for the definition of these statistics). 
 
 
 
@@ -317,9 +318,13 @@ For completeness, the pipeline is described in Appendix~\ref{apx:analysis}.
 \centering
 %\includegraphics[width=0.7\linewidth]{}
 \missingfigure[figwidth=6cm]{TODO}
-\caption{
-	\label{fig:read_data}
-	TODO}
+\caption{\footnotesize
+Brain regions encoding information discriminating between vocal and non-vocal stimuli.
+Map reports the centres of $27$-voxel sized spherical regions, as discovered by an accuracy test (\emph{svm.cv.1}) and a location test (\emph{sd}). 
+Region-wise significance was determined using the permutation scheme of \cite{stelzer_statistical_2013}, followed by region-wise $FDR \leq 0.1$ control using the Benjamini-Hochberg procedure \citep{benjamini_controlling_1995}.
+Number of permutations equals ???. 
+  }
+\label{fig:read_data}
 \end{figure}
 
 
