--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -309,6 +309,10 @@ To verify the observation that location tests have more power than accuracy test
 For completeness, the pipeline is described in Appendix~\ref{apx:analysis}. 
 To demonstrate our point, we compare the \emph{sd} location test with the \emph{svm.cv.1} accuracy test (see Table~\ref{tab:collected} for the definition of these statistics). 
 
+In agreement with our simulation results, the location test (\emph{sd}) discovers more brain regions that encode information discriminating between vocal and non-vocal stimuli when compared to an accuracy test (\emph{svm.cv.1}).
+The former discovers TODO regions, while the latter only TODO, as reported in Figure~\ref{fig:read_data}.
+We emphasize that both test statistics were compared with the same permutation scheme, and the same error controls, so that any difference in detections is due to their different power.
+
 
 
 
